# usage-meter

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-title.yml  release.yml
docs/: ARCHITECTURE.md
spike/: README.md  analyze-har.mjs  capture.mjs  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/fixtures/: chatgpt-usage.json  claude-usage.json
src-tauri/src/: auth.rs  lib.rs  main.rs  model.rs  scheduler.rs  secrets.rs
src-tauri/src/providers/: chatgpt.rs  claude.rs  mod.rs
