[package]
name = "usage-meter"
version = "0.1.0"
description = "Floating desktop widget tracking Claude and ChatGPT Codex subscription usage."
authors = ["Chace Raiter"]
edition = "2021"
license = "MIT"
repository = "https://github.com/chaceraiter/usage-meter"

[lib]
# The `_lib` suffix is required to keep the lib name unique on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "usage_meter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# OS credential store. `apple-native` uses the macOS Security framework,
# `windows-native` uses the Windows Credential Manager, `linux-native` uses
# libsecret via the Secret Service API. No sync backend is enabled — we
# never want cookies leaving the local machine.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
