[package]
name = "usage-meter"
version = "0.1.0"
description = "Floating desktop widget tracking Claude and ChatGPT Codex subscription usage."
authors = ["Chace Raiter"]
edition = "2021"
license = "MIT"
repository = "https://github.com/chaceraiter/usage-meter"

[lib]
# The `_lib` suffix is required to keep the lib name unique on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "usage_meter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` enables the system tray API (TrayIconBuilder).
# `image-png` lets us load the tray icon from a PNG at build time.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# UTC timestamps on the normalized snapshot and on provider responses.
# `serde` feature gives us `DateTime<Utc>` (de)serialization as RFC 3339.
# Default features are off to drop `iana-time-zone` and `js-sys`, which
# we don't need for a desktop app that only works in UTC internally.
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
# HTTP client for provider endpoint scraping. `rustls-tls` avoids
# linking OpenSSL, which simplifies cross-compilation and removes a
# class of CVEs we don't want to track. Default features are off to
# skip the openssl-tls backend and the `multipart` feature we don't need.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Explicit tokio dep for `tokio::time` in the scheduler. Tauri already
# pulls in tokio but may not enable the `time` feature. Cargo merges
# features across the dependency graph, so this is additive.
tokio = { version = "1", features = ["time"] }
# Structured logging — the scheduler logs fetch failures so the user
# can diagnose issues from `pnpm tauri dev` console output.
log = "0.4"
# UUID v4 generation for device-id and anonymous-id headers.
uuid = { version = "1", features = ["v4"] }

# OS credential store. `apple-native` uses the macOS Security framework,
# `windows-native` uses the Windows Credential Manager, `linux-native` uses
# libsecret via the Secret Service API. No sync backend is enabled — we
# never want cookies leaving the local machine.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[dev-dependencies]
# HTTP mock server for testing provider fetchers without touching real
# endpoints. Each test spins up its own local server, so tests are
# hermetic and parallelizable.
wiremock = "0.6"
# tokio runtime + macros for #[tokio::test].
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
